# cpp-auth-system

api/: .env  CMakeLists.txt  openapi.json  route_access.json
api/db/: auth-cpp-system.db  migrations.sql
api/src/: main.cpp
api/src/config/: env_config.cpp  env_config.h  json_config.cpp  json_config.h
api/src/controllers/: admin_controller.cpp  admin_controller.h  auth_controller.cpp  auth_controller.h  swagger_controller.cpp  swagger_controller.h  user_controller.cpp  user_controller.h
api/src/db/: db_connection.cpp  db_connection.h  migrations.cpp  migrations.h
api/src/dto/: role_dto.cpp  role_dto.h  token_dto.cpp  token_dto.h  user_dto.cpp  user_dto.h
api/src/errors/: error.cpp  error.h
api/src/exceptions/: sql_exception.cpp  sql_exception.h
api/src/middleware/: access_middleware.cpp  access_middleware.h  auth_middleware.cpp  auth_middleware.h
api/src/repositories/: role_repo.cpp  role_repo.h  token_repo.cpp  token_repo.h  user_repo.cpp  user_repo.h
api/src/routes/: auth_routes.cpp  auth_routes.h  routes.cpp  routes.h
api/src/utils/: admin_initializer.cpp  admin_initializer.h  app.h  password_encoder.cpp  password_encoder.h  role_initializer.cpp  role_initializer.h  token_provider.cpp  token_provider.h
qt-app/: .gitignore  CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qt-app.pro
qt-app/controllers/: main_controller.cpp  main_controller.h
qt-app/requests/: request_builder.h  requests_sender.cpp  requests_sender.h
qt-app/src/: main.cpp
qt-app/src/components/: clickable_label.cpp  clickable_label.h  error_frame.cpp  (+5 more)
(+32 files in other folders)
